---
config:
    class:
        hideEmptyMembersBox: true
---
classDiagram
    direction LR
    
    note for SpaceData  "add more render
                        details as needed, but
                        for now just color is fine"
    class SpaceData{
        +String spaceName
        +Color spaceColor
        +SpaceHoverEventChannel spaceHoverEventChannel
        +BooleanEventChannel spaceExitEventChannel
        +OnLanded(player: Player)
        +OnPassed(player: Player)
        +OnHover() SpaceHoverEvent
        +OnExit()
    }
    class OwnableSpaceData{
        +int collaborationValue
        -Player owner
        -PurchaseOwnableRequestEventChannel purchaseOwnableRequestChannel
        -ChargeOwnershipFeeEventChannel chargeOwnershipFeeEventChanel
        +SetOwner(player: Player)
    }
    
    note for PropertySpaceData       "this will be an
                                array with i=0->5,
                                where each index indicates
                                the upgrade level."
    class PropertySpaceData{
        +int[6] researchFundingValues
        +int dataPointCost
        -PurchaseUpgradeRequestEventChannel purchaseUpgradeRequestEventChannel
        -int currentUpgradeLevel
        +UpgradeProperty()
    }
    
    note for PlanetData         "this will be an
                                array i = 0->1,
                                where index indicates # 
                                planets owned by player - 1"
    class PlanetSpaceData{
        +int[2] diceMultipliers
        -DiceRolledEventChannel diceRolledEventChannel
        -int lastDiceRoll
        +OnEnable()
        +OnDisable()
        -StoreLastDiceRoll(dre: DiceRolledEvent)
    }
    
    note for InstrumentSpaceData     "this will be an
                                array i= 0->3,
                                where index indicates #
                                instruments owned by player"
    class InstrumentSpaceData{
        +int[4] researchFundingLevels
    }
    
    class CardSpaceData{
        +CardDeck cardDeck
    }
    
    class ChargeSpaceData{
        -int cost
        -String flavorText
        -ChargePlayerEventChannel chargePlayerEventChannel
    }
    
    class GoSpaceData{
        +int payout
        +PayPlayerEventChannel payPlayerEventChannel
        RaisePayEvent(player: Player)
    }
    %% I could have another base class for flavor text spaces
    %% but its literally the only common variable between like types
    %% so that seems like massive overkill.
    class LaunchPadSpaceData {
        +String flavorText
        +PlayerEventChannel playerGoesToJailEventChannel
        +PlayerEventChannel playerLeavesJailEventChannel
        -List<Player> playersInJail
        +OnEnable()
        +OnDisable()
        -AddPlayerToJail(player: Player)
        -RemovePlayerFromJail(player: Player)
    }
    class GravityAssistSpaceData {
        +String flavorText
    }
    class GoForLaunchSpaceData {
        +String flavorText
        +PlayerEventChannel goDirectlyToLaunchPadChannel
    }

    SpaceData <|-- ChargeSpaceData
    SpaceData <|-- GoSpaceData
    SpaceData <|-- GoForLaunchSpaceData
    SpaceData <|-- GravityAssistSpaceData
    SpaceData <|-- LaunchPadSpaceData
    SpaceData <|-- CardSpaceData
    SpaceData <|-- OwnableSpaceData
    OwnableSpaceData <|-- PlanetSpaceData
    OwnableSpaceData <|-- InstrumentSpaceData
    OwnableSpaceData <|-- PropertySpaceData